<resources>
    <string name="app_name">Gestor de Produção</string>
    <string name="string_desfazer">Desfacer</string>
    <string name="personagens">Personagens</string>
    <string name="sair">Sair</string>
    <string name="estoque">Estoque</string>
    <string name="trabalhos">Trabalhos</string>
    <string name="cadastrar_novo_trabalho">Cadastrar novo trabalho</string>
    <string-array name="raridades">
        <item>@string/stringComum</item>
        <item>@string/stringMelhorado</item>
        <item>@string/stringRaro</item>
        <item>@string/stringEspecial</item>
    </string-array>
    <string-array name="estados">
        <item>Produzir</item>
        <item>Produzindo</item>
        <item>Concluido</item>
    </string-array>
    <string-array name="licencas">
        <item>Licença do Iniciante</item>
        <item>Licença do Mestre</item>
        <item>Licença do Aprendiz</item>
        <item>Licença do Novato</item>
    </string-array>
    <string name="licencaIniciante">Licença de Artesanato de Iniciante</string>
    <string name="licencaMestre">Licença de Artesanato de Mestre</string>
    <string name="licencaAprendiz">Licença de Artesanato de Aprendiz</string>
    <string name="licencaNovato">Licença de Artesanato de Novato</string>
    <string-array name="licencas_completas">
        <item>@string/licencaIniciante</item>
        <item>@string/licencaMestre</item>
        <item>@string/licencaAprendiz</item>
        <item>@string/licencaNovato</item>
    </string-array>
    <string name="profissoes">Profissões</string>
    <string name="stringProfissaoArmaLongoAlcance">Armas de Longo Alcance</string>
    <string name="stringProfissaoArmasCorpoCorpo">Armas Corpo a Corpo</string>
    <string name="stringProfissaoArmaduraTecido">Armaduras de Tecido</string>
    <string name="stringProfissaoArmaduraLeve">Armaduras Leves</string>
    <string name="stringProfissaoArmaduraPesada">Armaduras Pesadas</string>
    <string name="stringProfissaoAneis">Anéis</string>
    <string name="stringProfissaoAmuletos">Amuletos</string>
    <string name="stringProfissaoBraceletes">Braceletes</string>
    <string name="stringProfissaoCapotes">Capotes</string>
    <string-array name="quantidade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="producaoRecursos">
        <item>melhorarlicencacomum</item>
        <item>licençadeproducaodoaprendiz</item>
        <item>grandecolecaoderecursoscomuns</item>
        <item>grandecolecaoderecursosavancados</item>
        <item>coletaemmassaderecursosavancados</item>
        <item>melhoriadaessenciacomum</item>
        <item>melhoriadasubstanciacomum</item>
        <item>melhoriadocatalizadorcomum</item>
        <item>melhoriadaessênciacomposta</item>
        <item>melhoriadasubtanciacomposta</item>
        <item>melhoriadocatalizadoramplificado</item>
        <item>criaresferadoaprendiz</item>
        <item>produzindoavarinhademadeira</item>
        <item>produzindocabecadocajadodejade</item>
        <item>produzindocabecadecajadodeonix</item>
        <item>criaresferadoneofito</item>
        <item>produzindoavarinhadeaço</item>
        <item>extracaodelascas</item>
        <item>manipulacaodelascas</item>
        <item>fazermodoaprendiz</item>
        <item>preparandolascasdequartzo</item>
        <item>manipulacaodemineriodecobre</item>
        <item>fazermodoprincipiante</item>
        <item>adquirirtesouradoaprendiz</item>
        <item>produzindofioresistente</item>
        <item>fazendotecidodelinho</item>
        <item>fazendotecidodecetim</item>
        <item>comprartesouradoprincipiante</item>
        <item>produzindofiogrosso</item>
        <item>adquirirfacadoaprendiz</item>
        <item>recebendoescamasdaserpente</item>
        <item>concluindocouroresistente</item>
        <item>adquirirfacadoprincipiante</item>
        <item>recebendoescamasdolagarto</item>
        <item>curtindocourogrosso</item>
        <item>adquirirmarretaodoaprendiz</item>
        <item>forjandoplacasdecobre</item>
        <item>fazendoplacasdebronze</item>
        <item>adquirirmarretaodoprincipiante</item>
        <item>forjandoplacasdeferro</item>
        <item>fazendoaneisdeaco</item>
        <item>adquirirmoldedoaprendiz</item>
        <item>extracaodepepitasdecobre</item>
        <item>recebendogemadassombras</item>
        <item>adquirirmoldedoprincipiante</item>
        <item>extracaodepepitasdeprata</item>
        <item>recebendogemadaluz</item>
        <item>adquirirpincadoaprendiz</item>
        <item>extracaodejadebruta</item>
        <item>recebendoenergiainicial</item>
        <item>adquirirpinçasdoprincipiante</item>
        <item>extracaodeonixextraordinaria</item>
        <item>recebendoeterinicial</item>
        <item>adquirirfuradordoaprendiz</item>
        <item>produzindotecidodelicado</item>
        <item>extracaodesubstanciainstável</item>
        <item>adquirirfuradordoprincipiante</item>
        <item>produzindotecidodenso</item>
        <item>extracaodesubstanciaestável</item>
        <item>recebendofibradebronze</item>
        <item>recebendoprata</item>
        <item>recebendoinsigniadeestudante</item>
        <item>recebendofibradeplatina</item>
        <item>recebendoambar</item>
        <item>recebendodistintivodeaprendiz</item>
    </string-array>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_ola">Olá</string>
    <string name="string_entre_em_sua_conta">Entre com seu e-mail e senha para continuar.</string>
    <string name="string_nome">Nome</string>
    <string name="string_email">E-mail</string>
    <string name="string_senha">Senha</string>
    <string name="string_esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="string_entrar">Entrar</string>
    <string name="string_nao_possui_uma_conta">Não possui uma conta?</string>
    <string name="string_cadastre_se">Cadastre-se</string>
    <string name="string_marca_gestor">Gestor</string>
    <string name="string_marca_de_producao">de Produção</string>
    <string name="string_acesse_sua_conta">Acesse sua conta</string>
    <string name="string_preencha_seus_dados">Preencha seus dados para começar.</string>
    <string name="string_requisitos_senha">Mínimo de 8 caracteres, com letra maiúscula, minúscula, número e símbolo.</string>
    <string name="string_instrucao_recuperar_senha">Informe o e-mail da sua conta. Enviaremos um link para você criar uma nova senha.</string>
    <string name="string_enviar_link">Enviar link</string>
    <string name="string_lembrou_a_senha">Lembrou a senha?</string>
    <string name="string_senha_curta">Senha muito curta.</string>
    <string name="string_senha_numerica">Senha deve conter ao menos um número.</string>
    <string name="string_senha_minuscula">Senha deve conter ao menos uma letra minúscula.</string>
    <string name="string_senha_maiuscula">Senha deve conter ao menos uma letra maiúscula.</string>
    <string name="string_senha_especial">Senha deve conter ao menos um símbolo (ex.: @ # ! ?).</string>
    <string name="string_entre">Entrar</string>
    <string name="stringAtivo">Ativo</string>
    <string name="stringInativo">Inativo</string>
    <string name="stringCarregandoDados">Carregando dados…</string>
    <string name="abre_menu_navegacao">Abre menu de navegação</string>
    <string name="fecha_menu_navegacao">Fecha menu de navegação</string>
    <string name="string_espaco_producao">Espaço para produção</string>
    <string name="string_estado">Estado</string>
    <string name="string_uso">Uso</string>
    <string name="stringConfiguracoes">Configurações</string>
    <string name="stringNovoPersonagem">Novo personagem</string>
    <string name="stringRecorrente">Recorrente</string>
    <string name="stringExperiencia">Experiência</string>
    <string name="stringExperienciaFracao">%1$s / %2$s</string>
    <string name="stringProfissoes">Profissões</string>
    <string name="stringNivel">Nível</string>
    <string name="stringQuantidade">Quantidade</string>
    <string name="stringRaridade">Raridade</string>
    <string name="stringTrabalhoNecessario">Trabalho necessário</string>
    <string name="stringLicenca">Licença</string>
    <string name="stringImagemDoTrabalhoDesejado">Imagem do trabalho desejado</string>
    <string name="stringAdicionar">Adicionar</string>
    <string name="stringUm">1</string>
    <string name="stringNovoTrabalho">Novo trabalho</string>
    <string name="stringTodos">Todos</string>
    <string name="stringProduzir">Produzir</string>
    <string name="stringProduzindo">Produzindo</string>
    <string name="stringPronto">Pronto</string>
    <string name="stringDesfazer">Desfazer</string>
    <string name="stringVendas">Vendas</string>
    <string name="stringExcluir">Excluir</string>
    <string name="stringExperienciaValor">Experiência %1$d</string>
    <string name="stringNivelValor">Nv. %1$d</string>
    <string name="stringNivelBadge">Nv %1$d</string>
    <string name="stringOuroValor">$ %1$s</string>
    <string name="stringQuantidadeValor">x %1$d</string>
    <string name="stringQuantidadeUndidade">%1$s und</string>
    <string name="stringEstadoValor">Estado: %1$s</string>
    <string name="stringUsoValor">Uso: %1$s</string>
    <string name="stringAutoProducaoValor">Auto produção: %1$s</string>
    <string name="stringEspacoProducaoValor">Espaço para produção: %1$d</string>
    <string name="stringTaxaLucroValor">%d%%</string>
    <string name="stringValorProducaoValor">%1$d ouros</string>
    <string name="stringValorLucroValor">%1$d ouros</string>
    <string name="teste">teste</string>
    <string name="stringPrioridade">Prioridade</string>
    <string name="stringEstadoVazioTituloTodosTrabalhos">Nenhum trabalho cadastrado</string>
    <string name="stringEstadoVazioMensagemTodosTrabalhos">Toque em + para cadastrar um trabalho ou ajuste a busca.</string>
    <string name="stringEstadoVazioTituloEstoque">Estoque vazio</string>
    <string name="stringEstadoVazioMensagemEstoque">Toque em + para adicionar um trabalho ao estoque ou ajuste a busca.</string>
    <string name="stringEstadoVazioTituloInsereTrabalho">Nenhum trabalho encontrado</string>
    <string name="stringEstadoVazioMensagemInsereTrabalho">Ajuste a busca ou os filtros para ver outros trabalhos.</string>
    <string name="stringEstadoVazioTituloProducao">Nenhum trabalho na produção</string>
    <string name="stringEstadoVazioMensagemProducao">Toque em + para adicionar um trabalho à produção ou ajuste a busca.</string>
    <string name="stringEstadoVazioTituloNovaProducao">Nenhum trabalho disponível</string>
    <string name="stringEstadoVazioMensagemNovaProducao">Não há trabalhos para produzir com os filtros selecionados.</string>
    <string name="stringEstadoVazioTituloVendas">Nenhuma venda encontrada</string>
    <string name="stringEstadoVazioTituloChanceVenda">Nenhuma chance de venda</string>
    <string name="stringEstadoVazioMensagemChanceVenda">Ajuste a busca ou registre vendas para calcular as chances.</string>
    <string name="stringEstadoVazioMensagemVendas">Toque em + para registrar uma venda ou ajuste a busca.</string>
    <string name="stringNomeProducao">Nome produção</string>
    <string name="stringProducao">Produção</string>
    <string name="stringDescricao">Descrição</string>
    <string name="stringData">Data</string>
    <string name="stringValor">Valor</string>
    <string name="stringValorProducao">Valor de produção</string>
    <string name="stringTaxaLucro">Taxa de lucro (%)</string>
    <string name="stringValorLucro">Valor com lucro</string>
</resources>