<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav">

    <group
        android:checkableBehavior="single"
        android:id="@+id/grupo2">
        <item
            android:id="@+id/listaTrabalhosProducao"
            android:title="@string/stringProducao" />
        <item
            android:id="@+id/listaTrabalhosEstoque"
            android:title="@string/estoque"/>
        <item
            android:id="@+id/listaTrabalhosVendidos"
            android:title="@string/stringVendas"/>
        <item
            android:id="@+id/listaProfissoes"
            android:title="@string/stringProfissoes"/>
    </group>

    <group
        android:id="@+id/grupo3">
        <item
            android:id="@+id/inserePersonagem"
            android:title="@string/stringNovoPersonagem"/>

        <item
            android:id="@+id/nav_trabalhos"
            android:title="@string/trabalhos" />

        <item
            android:id="@+id/atributosPersonagem"
            android:title="@string/stringConfiguracao"/>

        <item
            android:id="@+id/splashscreenFragment"
            android:title="@string/sair"/>
    </group>

</menu>