<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_marca"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:contentDescription="@string/app_name"
        android:importantForAccessibility="yes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/string_marca_gestor"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:letterSpacing="-0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:importantForAccessibility="no"
            android:text="@string/string_marca_de_producao"
            android:textColor="@color/cor_azul_claro"
            android:textSize="22sp"
            android:letterSpacing="-0.01" />
    </LinearLayout>
</LinearLayout>
