<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutConfirmaTrabalho"
    tools:context=".ui.fragment.ConfirmaTrabalhoFragment" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="320dp">

        <CheckBox
            android:id="@+id/checkBoxProducaoRecorrenteConfirmaTrabalho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/stringRecorrente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutQuantidadeConfirmaTrabalho"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/stringQuantidade"
            android:labelFor="@id/txtAutoCompleteQuantidadeConfirmaTrabalho">

            <AutoCompleteTextView
                android:id="@+id/txtAutoCompleteQuantidadeConfirmaTrabalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/stringUm" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imagemConfirmaTrabalho"
        android:layout_width="340dp"
        android:layout_height="310dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/stringImagemDoTrabalhoDesejado"
        app:layout_constraintBottom_toTopOf="@+id/txtLayoutLicencaConfirmaTrabalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_licenca" />

    <TextView
        android:id="@+id/txtTrabalhoNecessarioConfirmaTrabalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/txtProfissaoConfirmaTrabalho"
        app:layout_constraintEnd_toEndOf="@+id/txtProfissaoConfirmaTrabalho"
        app:layout_constraintStart_toStartOf="@+id/txtProfissaoConfirmaTrabalho"
        tools:text="TrabalhoNecessario" />

    <TextView
        android:id="@+id/txtProfissaoConfirmaTrabalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/txtLayoutLicencaConfirmaTrabalho"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:text="Profissão" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutLicencaConfirmaTrabalho"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/stringLicenca"
        android:layout_marginBottom="20dp"
        android:labelFor="@id/txtAutoCompleteLicencaConfirmaTrabalho"
        app:layout_constraintStart_toStartOf="@id/txtProfissaoConfirmaTrabalho"
        app:layout_constraintEnd_toEndOf="@id/txtProfissaoConfirmaTrabalho"
        app:layout_constraintBottom_toTopOf="@id/botaoCadastraConfirmaTrabalho"
        app:startIconDrawable="@drawable/ic_licenca">

        <AutoCompleteTextView
            android:id="@+id/txtAutoCompleteLicencaConfirmaTrabalho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:inputType="none"
            android:text="@string/stringLicenca"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoCadastraConfirmaTrabalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:background="@drawable/botao_estados_background"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/stringAdicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtLayoutLicencaConfirmaTrabalho"
        app:layout_constraintStart_toStartOf="@+id/txtLayoutLicencaConfirmaTrabalho" />

</androidx.constraintlayout.widget.ConstraintLayout>